Can now access patients using the restful patterns. Updated Liquibase and entities to allow the use of a crud repository. Turned off auto-ddl generation by JPA from the annotated entities to allow for liquibase usage.
