# swagger.yml
@@ -26,7 +26,7 @@ paths:
               $ref: '#/definitions/Rule'
   /rules/{id}:
     get:
-      summary: Message by ID
+      summary: Rule by ID
       description: Access a single rule by ID
       tags:
         - rule
@@ -42,6 +42,41 @@ paths:
           description: Rule
           schema:
             $ref: '#/definitions/Rule'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+  /patients:
+      get:
+        summary: Patients
+        description: Endpoint returns a list of patients
+        tags:
+          - patient
+        responses:
+          200:
+            description: Array of rules
+            schema:
+              type: array
+              items:
+                $ref: '#/definitions/Patient'
+  /patients/{id}:
+    get:
+      summary: Patient by ID
+      description: Access a single patient by ID
+      tags:
+        - patient
+      parameters:
+        - name: id
+          in: path
+          description: ID of rule to fetch
+          required: true
+          type: integer
+          format: int64
+      responses:
+        200:
+          description: Rule
+          schema:
+            $ref: '#/definitions/Patient'
         default:
           description: Unexpected error
           schema:
@@ -70,11 +105,19 @@ definitions:
     type: object
     properties:
       id:
-        type: string
-      priority:
         type: integer
-        formet
-
+        format: int64
+      facilityId:
+        type: integer
+        format: int64
+      valid:
+        type: boolean
+      startDate:
+        type: string
+        format: 'date-time'
+      rcopiaLastUpdatedDate:
+        type: string
+        format: 'date-time'
   Error:
     type: object
     properties:
